--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
         </activity>
         <activity android:name=".LoginActivity" />
         <activity android:name=".Dasboard_menu" />
-        <activity android:name=".Dashboard_menu_pengukur"></activity>
+        <activity android:name=".Dashboard_menu_pengukur" />
+        <activity android:name=".RegisterActivity">
+        </activity>
     </application>
 
 </manifest>
